The Grinder 3.2
---------------

  Add net.grinder.ScriptContext startWorkerThread() and
  startWorkerThread(testRunner) methods which scripts can use to start
  additional worker threads.

  Fulfil feature request 1694369 - Ability to stop worker threads from
  script. See the ScriptContext stopThisWorkerThread() and stopWorkerThread()
  methods.

  Fix bug 2018168 - HTTP filter generates invalid Jython variable
  names.

  Address bug 2058502 - Add example script showing how to ramp up threads.
  Thanks to Travis Bear for the prompt.

  Fix bug 2092881 - Agents do not start first time after reset if console
  overrides consoleHost or consolePort properties. Thanks to HappySpaceInvader
  for the report.

  Fix bug 2138601 - Moving table columns results in incorrect formatting.
  Thanks to Walter Tuvell for the report.

  Fulfil feature request 2201502. Add stream based versions of POST, PUT,
  OPTIONS to HTTPRequest. This allows arbitrarily large amount of data can be
  sent without requiring a corresponding amount of memory. Thanks to Walter
  Tuvell for the suggestion.

  Fix bug 1576609 - "Accept Cookie" rules too strict. I've relaxed the
  rules about what cookie domains are acceptable to The Grinder, better to
  align it with current browser implementations. Thanks to Bryan Cornies for
  the report.

  Fix bug 1580340 - Can't invoke static methods through a wrapped Java class.

  Fix bug 2314157 - Log4j classes reloaded by IsolatingClassLoader. This bug
  was really a feature request to allow specific classes to be shared when
  running with grinder.debug.singleprocess=true. This is important because
  GrinderStone uses the single process mode.  Classes can now be share with
  the new grinder.debug.singleprocess.sharedclasses property. Thanks to
  Fei Fan for requesting this.

  Dutch console translation from Marc Van Giel.

  Fulfil feature request 2412104 - Support streaming HTTP responses. Thanks